--- a/source/_posts/2016-07-24-vuex-v2-中的一些变化.md
+++ b/source/_posts/2016-07-24-vuex-v2-中的一些变化.md
@@ -5,11 +5,13 @@ categories:
   - 技术
 tags:
   - 前端开发
-  - vue
-  - vuex
+  - Vue
+  - Vuex
 ---
 
 由于之前身体抱恙休假在家，于是对 `vue/vuex` 便没有多少关注，在上周回来投入到工作中时发现 `vuex` 2.0.0 相对于之前的版本有了部分变化，关于 `vuex` 最新版的设计在此[issue](https://github.com/vuejs/vuex/issues/236)中。
+
+<!--more-->
 
 ## 命名语义化
 ---
