--- a/source/_posts/2017-10-20-前端工作流.md
+++ b/source/_posts/2017-10-20-前端工作流.md
@@ -21,7 +21,7 @@ tags:
 
 在一切的一切开始之前，我们需要准备我们的开发环境，首先就是 [`Node`](https://nodejs.org)，你可以在官网下载，但更多的时候，你可能需要去[这里](https://npm.taobao.org/mirrors/node)。
 
-尽管一切看起来似乎很合理，但有的时候我们往往需要切换 `Node` 的版本，比如说从 `Latest` 切换到 `LTS`，甚至于更老的版本，这在将 `Node` 用于服务端开发时将更加频繁，`NVM(W)` 可以很好的承担这一职责，其中 [`NVM`](https://github.com/creationix/nvm) 适用于 `*nix` 平台，而 [`NVMW`](https://github.com/hakobera/nvmw) 适用于 `Windows。`
+尽管一切看起来似乎很合理，但有的时候我们往往需要切换 `Node` 的版本，比如说从 `Latest` 切换到 `LTS`，甚至于更老的版本，这在将 `Node` 用于服务端开发时将更加频繁，`NVM(W)` 可以很好的承担这一职责，其中 [`NVM`](https://github.com/creationix/nvm) 适用于 `*nix` 平台，而 [`NVMW`](https://github.com/hakobera/nvmw) 适用于 `Windows`。
 
 在安装好 `Node` 之后，[`NPM`](https://www.npmjs.com/) 也会随之而安装，但不一定是最新版本，如需要更新至最新版本，需执行以下命令:
 
