--- a/source/_posts/2017-10-20-前端工作流.md
+++ b/source/_posts/2017-10-20-前端工作流.md
@@ -54,7 +54,7 @@ nrm use npm # 或者 nrm use taobao
 
 # 一切准备就绪
 
-为每一个独立项目新建文件夹这个自不必多谈，在新建文件夹之后，在文件夹内依次初始化 `Git` 仓库以及 `NPM`。
+为每一个独立项目新建文件夹这个自不必多谈，在新建文件夹之后，在文件夹内依次初始化 `Git` 仓库以及 `NPM`。
 
 ```bash
 # 初始化 git
@@ -82,7 +82,7 @@ npm init
 
 ## 代码质量
 
-除了通过优秀的算法与逻辑处理来提升代码质量之外，随着前端项目的大型化，`类型检查`也逐渐的被重视起来，除了 `TypeScript` 本身就提供类型推断和类型检查之外，[`Flowtype`](https://flow.org/) 也能很好的完成这部分工作。两者在配合前文提到的编辑器插件可以更加友好以及准确的给出类型推断以及智能提示。
+除了通过优秀的算法与逻辑处理来提升代码质量之外，随着前端项目的大型化，`类型检查`也逐渐的被重视起来，除了 `TypeScript` 本身就提供类型推断和类型检查之外，[`Flowtype`](https://flow.org/) 也能很好的完成这部分工作。两者在配合前文提到的编辑器插件可以更加友好以及准确的给出类型推断以及智能提示。
 
 尽管如此，在多人协作之时，我们依然很难避免不同风格的编码习惯出现在同一个项目之中，因此统一的编码习惯需要借助外部工具来约束。无论是 [`ESLint`](https://eslint.org/) 还是 [`JSLint`](https://github.com/douglascrockford/JSLint) 都可以通过简单的配置来实现这一想法。尽管它们的功能类似，但与时俱进的看法是 `ESLint` 优于 `JSLint`，因为它更加贴合 `ES Next` 的语法。除前述之外，还有 [`EditorConfig`](http://editorconfig.org/) 用于多编辑器协同与 [`StyleLint`](https://github.com/stylelint/stylelint) 用于样式检查。
 
