--- a/source/_posts/2017-10-20-前端工作流.md
+++ b/source/_posts/2017-10-20-前端工作流.md
@@ -98,7 +98,7 @@ npm init
 
 当一切，包含你的逻辑、测试用例都完成之后，可以开始构建代码了，通常在这个时候我们需要借助其他工具来完成这一步，比如 [`Webpack`](https://webpack.js.org/)、[`Rollup`](https://rollupjs.org/)，[`Fis`](https://fex-team.github.io/fis3/) 也将是一个不错的选择。他们会将你模块化的代码以更加合适的方式组织为更少的文件数以及文件大小，以便能够更快的打开我们的应用，这其中包含了按需加载、代码压缩、转码、分析依赖等诸多工作，而你要做的仅仅是为他们写一个简单的配置文件。
 
-提到转码，则不得不提到 [`Babel`](http://babeljs.io/)，尽管 `JavaScript` 自身在不断进化，但浏览器很难紧跟步伐，而且这一决定权还不在开发者自己。因此，我们将我们用最新、最流行的方式写出的代码转码为在旧浏览器中能够执行的代码，而这，正是 `Babel` 所做的工作。
+提到转码，则不得不提到 [`Babel`](http://babeljs.io/)，尽管 `JavaScript` 自身在不断进化，但浏览器很难紧跟步伐，而且这一决定权还不在开发者自己。因此，我们将我们用最新、最流行的方式写出的代码转码为在旧浏览器中能够执行的代码，而这，正是 `Babel` 所做的工作。
 
 除了 `JavaScript` 的转码之外，`CSS` 的预处理与后处理往往也是在这个时候去处理。因为 `CSS` 本身的局限性，我们很难把它当作为一门完整的编程语言去看待，它更多的只是一个 `DSL(Domain-specific language)`，因此而衍生了 [`Sass`](http://sass-lang.com/)、[`Less`](http://lesscss.org/)、[`Stylus`](http://stylus-lang.com/) 等预处理器以及后处理器 [`PostCSS`](https://github.com/postcss/postcss)，在切身实践之后，你将体会到它的酸爽。
 
