--- a/source/_posts/2017-10-20-前端工作流.md
+++ b/source/_posts/2017-10-20-前端工作流.md
@@ -44,7 +44,7 @@ nrm use npm # 或者 nrm use taobao
 
 随着整个前端行业的繁荣，可选编辑器的编辑器也越来越多，功能也越来越强大，无论是 [`Vim`](https://github.com/vim/vim)、[`WebStorm`](https://www.jetbrains.com/webstorm/)，还是最新的 [`Atom`](https://atom.io/) 与 [`VSCode`](https://code.visualstudio.com/)，都有它的受众。而 `Atom` 与 `VSCode` 的丰富插件为我们的开发体验提升到了无以复加的地步，在插件市场总有一款适合你，如有不适合，你还可以自己开发一个插件，因为 `JavaScript` 就是插件的开发语言。
 
-尽管有很多编辑器可以选择，但是，我推荐 `VSCode`，无论是它的打开速度，性能都优于其他编辑器，简直无可挑剔，而且本地化也很优秀，更为重要的，你可以在 `VSCode` 调试你的代码，而且插件下载速度比 `Atom` 高到不知哪里去了。
+尽管有很多编辑器可以选择，但是，我推荐 `VSCode`，无论是它的打开速度，性能都优于其他编辑器，简直无可挑剔，而且本地化也很优秀，更为重要的，你可以在 `VSCode` 调试你的代码，而且插件下载速度比 `Atom` 高到不知哪里去了。
 
 ## 版本控制
 
