Chore: update link

--- a/source/_posts/2016-04-13-Vue简介.md
+++ b/source/_posts/2016-04-13-Vue简介.md
@@ -2,7 +2,7 @@
 title: Vue简介
 date: 2016-04-13 12:47:46
 updated: 2017-10-20 16:28:00
-thumbnail: /blog/images/19.jpg
+thumbnail: /images/19.jpg
 categories:
 - 技术
 tags:
