--- a/source/_posts/2016-07-24-vuex-v2-中的一些变化.md
+++ b/source/_posts/2016-07-24-vuex-v2-中的一些变化.md
@@ -1,7 +1,7 @@
 ---
 title: vuex v2 中的一些变化
 date: 2016-07-24 22:51:22
-thumbnail: /blog/images/23.jpg
+thumbnail: /images/23.jpg
 categories:
   - 技术
 tags:
