--- a/source/_posts/2017-10-20-前端工作流.md
+++ b/source/_posts/2017-10-20-前端工作流.md
@@ -2,7 +2,7 @@
 title: 前端工作流
 date: 2017-10-20 14:44:32
 updated: 2017-10-20 16:58:00
-thumbnail: /blog/images/5.jpg
+thumbnail: /images/5.jpg
 tags:
     - 经验总结
 ---
